--- a/index-two.html
+++ b/index-two.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/index-two.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -47,26 +47,26 @@
             <div class="row row-cols-4 pt-3">
                 <div class="col py-3">
                     <figure>
-                        <img src="img/third.png" class="img-fluid" alt="">
-                        <figcaption class="text-center">helo</figcaption>
+                        <img src="img/third.png" class="img-fluid img-thumbnail rounded-circle" id="my-image" alt="">
+                        <figcaption class="text-center pt-3 ">helo</figcaption>
                     </figure>
                 </div>
                 <div class="col py-3">
                     <figure>
-                        <img src="img/second.png" class="img-fluid" alt="">
-                        <figcaption class="text-center">hello</figcaption>
+                        <img src="img/second.png" class="img-fluid img-thumbnail rounded-circle" id="my-image" alt="">
+                        <figcaption class="text-center pt-3">hello</figcaption>
                     </figure>
                 </div>
                 <div class="col py-3">
                     <figure>
-                        <img src="img/first.png" class="img-fluid" alt="">
-                        <figcaption class="text-center">hello</figcaption>
+                        <img src="img/first.png" class="img-fluid img-thumbnail rounded-circle" id="my-image" alt="">
+                        <figcaption class="text-center pt-3">hello</figcaption>
                     </figure>
                 </div>
                 <div class="col py-3">
                     <figure>
-                        <img src="img/fourth.png" class="img-fluid" alt="">
-                        <figcaption class="text-center">hello</figcaption>
+                        <img src="img/fourth.png" class="img-fluid img-thumbnail rounded-circle" id="my-image" alt="">
+                        <figcaption class="text-center pt-3">hello</figcaption>
                     </figure>
                 </div>
             </div>
@@ -79,16 +79,16 @@
                 <div class="col-md-6 pt-5">
                     <p class="cap">partner</p>
                     <h3 class="font-weight-bold">Enjoy VIP partner treatment</h3>
-                    <ul>
-                        <li>Training, Certification and dev accounts</li>
-                        <li>Personalized certification badges</li>
-                        <li>Rapid-response partner team</li>
-                    </ul>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Training, Certification and dev accounts</li>
+                        <li class="list-group-item">Personalized certification badges</li>
+                        <li class="list-group-item">Rapid-response partner team</li>
+                      </ul>
                 </div>
                 <div class="col-md-6">
                     <figure>
                         <img src="img/laptop.jpg" alt=""
-                            class="img-fluid">
+                            class="img-fluid img-thumbnail">
                     </figure>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                 <div class="col-md-6">
                     <figure>
                         <img src="img/advisors.jpg" alt=""
-                            class="img-fluid">
+                            class="img-fluid img-thumbnail">
                     </figure>
                 </div>
                 <div class="col-md-6 pt-5 pl-5">
@@ -115,16 +115,16 @@
                 <div class="col-md-6 pt-5">
                     <p class="cap">grow</p>
                     <h3 class="font-weight-bold">Access referral or reseller options</h3>
-                    <ul>
-                        <li>Referral fees for lifetime customer</li>
-                        <li>Partner portal to manage referral program</li>
-                        <li>Accelerating referral fees based on partner tier</li>
-                    </ul>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Referral fees for lifetime customer</li>
+                        <li class="list-group-item">Partner portal to manage referral program</li>
+                        <li class="list-group-item">Accelerating referral fees based on partner tier</li>
+                      </ul>
                 </div>
                 <div class="col-md-6">
                     <figure>
                         <img src="img/stocks.jpg" alt=""
-                            class="img-fluid">
+                            class="img-fluid img-thumbnail">
                     </figure>
                 </div>
             </div>
@@ -143,8 +143,8 @@
                 </div>
                 <div class="col-md-6 padleft">
                     <figure>
-                        <img src="img/apply_now.jpg" alt=""
-                            class="img-fluid rounded-circle">
+                        <img src="img/apply_now.jpg" alt="" id="my-image"
+                            class="img-fluid rounded-circle img-thumbnail">
                     </figure>
                 </div>
             </div>
@@ -160,13 +160,13 @@
                 </div>
                 <div class="col-md-6 order-1">
                     <figure>
-                        <img src="img/platform.jpg" alt=""
-                            class="img-fluid rounded-circle">
+                        <img src="img/platform.jpg" alt="" id="my-image"
+                            class="img-fluid rounded-circle img-thumbnail">
                     </figure>
                 </div>
             </div>
             <!-- third section -->
-            <div class="row pt-3">
+            <div class="row pt-3 pb-3">
                 <div class="col-md-6 pt-5">
                     <p class="capOther">enjoy the benifits</p>
                     <p>
@@ -176,8 +176,8 @@
                 </div>
                 <div class="col-md-6 padleft">
                     <figure>
-                        <img src="img/benifits.jpg" alt=""
-                            class="img-fluid rounded-circle">
+                        <img src="img/benifits.jpg" alt="" id="my-image"
+                            class="img-fluid rounded-circle img-thumbnail">
                     </figure>
                 </div>
             </div>
